update jmockit version