@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>org.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
-			<version>1.39</version>
+			<version>1.25</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -60,6 +60,32 @@
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.3.0</version>
         	</plugin>
+        	<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<finalName>${project.artifactId}-${project.version}</finalName>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>payments-api</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<!-- This plug-in instructs to use the mentioned JDK for compilation Reference:-
 			http://maven.apache.org/plugins/maven-compiler-plugin/examples/compile-using-different-jdk.html -->
 			<plugin>
@@ -84,32 +110,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<finalName>${project.artifactId}-${project.version}</finalName>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-				<executions>
-					<execution>
-						<id>payments-api</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M3</version>
-				<configuration>
-					<argLine>
-						-Djdk.attach.allowAttachSelf <!-- required to run test with jmockit on JDK 9 -->
-					</argLine>
-				</configuration>
 			</plugin>
 			<plugin>
                 <groupId>org.jacoco</groupId>
